--- a/core/css/stylesheet-icons.css
+++ b/core/css/stylesheet-icons.css
@@ -39,6 +39,19 @@
   width: 1.28571429em;
   text-align: center; }
 
+.i-spin {
+  -webkit-animation: i-spin 1s infinite;
+  animation: i-spin 1s infinite;
+  transform-origin: bottom right;
+}
+
+@keyframes i-spin {
+  0% {
+    transform: rotate(0); }
+  100% {
+    transform: rotate(359deg); }
+}
+
 .i-color-black {
   fill: #000; }
 
