--- a/core/css/stylesheet-vars.css
+++ b/core/css/stylesheet-vars.css
@@ -23,6 +23,11 @@
   --mark-background-color: #ff0;
   --figcaption-color: #888;
 
+  --page-progress-zindex: 2000;
+  --page-progress-height: .45em;
+  --page-progress-start-color: #09c;
+  --page-progress-end-color: #f44;
+
   --header-background-color: #4650F8;
   --header-color: #fff;
 
@@ -83,20 +88,20 @@
   --alert-danger-border-color: #f5c2c7;
   --alert-danger-color: #842029;
   --alert-danger-link: #6a1a21;
-  --danger-background-color: #dc3546;
-  --danger-border-color: #f5c6cb;
-  --danger-color: #721c24;
+  --danger-background-color: #f8d7da;
+  --danger-border-color: #f5c2c7;
+  --danger-color: #842029;
   --danger-color-contrast: #fff;
-  --danger-link: #491217;
+  --danger-link: #6a1a21;
   --alert-dark-background-color: #d3d3d4;
   --alert-dark-border-color: #bcbebf;
   --alert-dark-color: #141619;
   --alert-dark-link: #101214;
-  --dark-background-color: #212429;
-  --dark-border-color: #c6c8ca;
-  --dark-color: #1b1e21;
+  --dark-background-color: #d3d3d4;
+  --dark-border-color: #bcbebf;
+  --dark-color: #141619;
   --dark-color-contrast: #000;
-  --dark-link: #040505;
+  --dark-link: #101214;
   --alert-default-background-color: #ddd;
   --alert-default-border-color: #ced4da;
   --alert-default-color: #000;
@@ -110,56 +115,56 @@
   --alert-info-border-color: #b6effb;
   --alert-info-color: #055160;
   --alert-info-link: #04414d;
-  --info-background-color: #0dcaf0;
-  --info-border-color: #bee5eb;
-  --info-color: #0c5460;
+  --info-background-color: #cff4fc;
+  --info-border-color: #b6effb;
+  --info-color: #055160;
   --info-color-contrast: #fff;
-  --info-link: #062c33;
+  --info-link: #04414d;
   --alert-light-background-color: #fefefe;
   --alert-light-border-color: #fdfdfe;
   --alert-light-color: #636464;
   --alert-light-link: #4f5050;
-  --light-background-color: #f8f9fb;
+  --light-background-color: #fefefe;
   --light-border-color: #fdfdfe;
-  --light-color: #818182;
+  --light-color: #636464;
   --light-color-contrast: #fff;
-  --light-link: #686868;
+  --light-link: #4f5050;
   --alert-primary-background-color: #cfe2ff;
   --alert-primary-border-color: #b6d4fe;
   --alert-primary-color: #084298;
   --alert-primary-link: #06357a;
-  --primary-background-color: #0d6efd;
-  --primary-border-color: #bbd6fe;
-  --primary-color: #073984;
+  --primary-background-color: #cfe2ff;
+  --primary-border-color: #b6d4fe;
+  --primary-color: #084298;
   --primary-color-contrast: #fff;
-  --primary-link: #042454;
+  --primary-link: #06357a;
   --alert-secondary-background-color: #e2e3e5;
   --alert-secondary-border-color: #d3d6d8;
   --alert-secondary-color: #41464b;
   --alert-secondary-link: #34383c;
-  --secondary-background-color: #6c747e;
-  --secondary-border-color: #d6d8db;
-  --secondary-color: #383d41;
+  --secondary-background-color: #e2e3e5;
+  --secondary-border-color: #d3d6d8;
+  --secondary-color: #41464b;
   --secondary-color-contrast: #fff;
-  --secondary-link: #202326;
+  --secondary-link: #34383c;
   --alert-success-background-color: #d1e7dd;
   --alert-success-border-color: #badbcc;
   --alert-success-color: #0f5132;
   --alert-success-link: #0c4128;
-  --success-background-color: #188754;
-  --success-border-color: #c3e6cb;
-  --success-color: #15572f;
+  --success-background-color: #d1e7dd;
+  --success-border-color: #badbcc;
+  --success-color: #0f5132;
   --success-color-contrast: #fff;
-  --success-link: #0b2e13;
+  --success-link: #0c4128;
   --alert-warning-background-color: #fff3cd;
   --alert-warning-border-color: #ffecb5;
   --alert-warning-color: #664d03;
   --alert-warning-link: #523e02;
-  --warning-background-color: #fec007;
-  --warning-border-color: #ffeeba;
-  --warning-color: #856404;
+  --warning-background-color: #fff3cd;
+  --warning-border-color: #ffecb5;
+  --warning-color: #664d03;
   --warning-color-contrast: #fff;
-  --warning-link: #533f03;
+  --warning-link: #523e02;
 
   --justify-important: center;
   --justify-normal: left;
@@ -239,6 +244,12 @@
   --slidertron-background-color: #ddd;
 
   --jumbotron-background-color: #ddd;
+  --starRating-color: #ffdf00;
+  --starRating-outline-width: 1px;
+  --starRating-outline-color: #888;
+
+  --chat-zindex: 1020;
+  --chat-header-color: #e9e9e9;
 };
 
 @media (prefers-color-scheme: dark) {
