--- a/layout/default/bookings.html
+++ b/layout/default/bookings.html
@@ -54,9 +54,7 @@
 				<label for="postcode">Postcode</label>
 				<input type="text" id="postcode" name="postcode" value="" placeholder="Enter a Postcode...">
 				<label for="date">Date</label>
-				<input type="date" id="date" name="tis" min="<print currentdate>" value="<print currentdate>">
-				<label for="time">Time</label>
-				<input type="time" id="time" name="tim">
+				<input type="datetime-local" id="date" name="tis" min="<print currentdate>" value="<print currentdate>">
 				<bookservices>
 					<label for="rid">Event/Service</label>
 					<serviceselect>
