--- a/core/css/seohelper.css
+++ b/core/css/seohelper.css
@@ -4,33 +4,33 @@
   top: -39px !important;
   width: 80% !important;
   height: 39px !important;
-  font-family: sans-serif;
-  font-size: 14px;
-  color: #000;
+  font-family: sans-serif !important;
+  font-size: 14px !important;
+  color: #000 !important;
   background-color: #d8d8d8 !important;
-  margin: 0 10%;
-  padding: 0 10px;
-  border-bottom-left-radius: 10px;
-  border-bottom-right-radius: 10px;
-  border-width: 0;
-  -moz-transition: top .5s ease;
-  -webkit-transition: top .5s ease;
-  -o-transition: top .5s ease;
-  transition: top .5s ease; }
+  margin: 0 10% !important;
+  padding: 0 10px !important;
+  border-bottom-left-radius: 10px !important;
+  border-bottom-right-radius: 10px !important;
+  border-width: 0 !important;
+  -moz-transition: top .5s ease !important;
+  -webkit-transition: top .5s ease !important;
+  -o-transition: top .5s ease !important;
+  transition: top .5s ease !important; }
 
 .development.toggled {
   top: 0 !important; }
 
 .development .dropper {
-  position: absolute;
-  left: 30px;
-  bottom: -20px;
-  width: 178px;
-  height: 20px;
+  position: absolute !important;
+  left: 30px !important;
+  bottom: -20px !important;
+  width: 178px !important;
+  height: 20px !important;
   background-color: #d8d8d8 !important;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
-  border-width: 0; }
+  border-bottom-left-radius: 5px !important;
+  border-bottom-right-radius: 5px !important;
+  border-width: 0 !important; }
 
 .development nav {
   display: flex !important;
@@ -39,7 +39,9 @@
   align-items: center !important;
   margin-bottom: 0 !important;
   background-color: transparent !important;
+  font-family: sans-serif !important;
   font-weight: 700 !important;
+  font-size: 14px !important;
   outline: none !important;
   -webkit-box-shadow: none !important;
   box-shadow: none !important;}
@@ -94,28 +96,31 @@
   margin: 0 10px 0 0 !important; }
 
 .btn-dev {
-  position: relative;
-  display: inline-block;
-  background: #ddd;
-  color: #000;
-  font-weight: 400;
-  margin: 0;
-  border-style: solid;
-  border-color: #ddd;
-  border-width: 1px; }
+  position: relative !important;
+  display: inline-block !important;
+  background: #ddd !important;
+  color: #000 !important;
+  font-family: sans-serif !important;
+  font-weight: 400 !important;
+  margin: 0 !important;
+  border-style: solid !important;
+  border-color: #ddd !important;
+  border-width: 1px !important; }
 
 .btn-dev:hover,
 .btn-dev:focus,
 .btn-dev.active {
-  background: #fff;
-  color: #000;
-  border-style: solid;
-  border-color: #aaa;
-  border-width: 1px; }
+  background-color: #fff !important;
+  color: #000 !important;
+  border-style: solid !important;
+  border-color: #aaa !important;
+  border-width: 1px !important; }
 
 button.development-dropdown {
-  color: #000;
-  font-weight: 400;
+  color: #000 !important;
+  font-family: sans-serif !important;
+  font-weight: 400 !important;
+  font-size: 10px !important;
   border: 0 !important;
   background: transparent !important;
   margin: 0 !important;
@@ -124,28 +129,28 @@ button.development-dropdown {
   box-shadow: 0 0 0 !important; }
 
 button.development-dropdown svg {
-  position: absolute;
-  top: 3px;
-  right: 10px;
-  width: 14px;
-  height: 14px; }
+  position: absolute !important;
+  top: 3px !important;
+  right: 10px !important;
+  width: 14px !important;
+  height: 14px !important; }
 
 button.development-dropdown svg {
-  display: inline-block; }
+  display: inline-block !important; }
 
 button.development-dropdown svg.toggled {
-  display: none; }
+  display: none !important; }
 
 @media (max-width: 361px) {
   div.development {
-    width: 100%;
-    margin: 0; }
+    width: 100% !important;
+    margin: 0 !important; }
 }
 
 @media (min-width: 768px) {
   div.development {
     width: 80% !important;
-    margin: 0 10%; }
+    margin: 0 10% !important; }
 }
 
 head {
