--- a/core/css/style.css
+++ b/core/css/style.css
@@ -175,6 +175,38 @@ legend {
   background-color: #3ac47d !important;
   border-color: #3ac47d !important; }
 
+.btn-ghost {
+  color: #000 !important;
+  background-color: transparent !important;
+  border-width: 0 !important;
+  border-color: transparent !important;
+  box-shadow: none !important;
+  outline: 0 !important; }
+
+.btn-ghost:hover {
+  color: #000 !important;
+  background-color: transparent !important;
+  border-width: 0 !important;
+  border-color: transparent !important;
+  box-shadow: none !important;
+  outline: 0 !important; }
+
+.btn-ghost:focus {
+  color: #000 !important;
+  background-color: transparent !important;
+  border-width: 0 !important;
+  border-color: transparent !important;
+  box-shadow: none !important;
+  outline: 0 !important; }
+
+.btn-ghost:active {
+  color: #000 !important;
+  background-color: transparent !important;
+  border-width: 0 !important;
+  border-color: transparent !important;
+  box-shadow: none !important;
+  outline: 0 !important; }
+
 .add:hover,
 .btn-success:hover {
   color: #fff !important;
@@ -657,6 +689,39 @@ header .account {
 
 [data-rank="1000"]:before {
   content: 'Developer'; }
+
+.quickedit *,
+.quickedit .input-text {
+  font-size: .95em; }
+
+.quickedit label {
+  margin: 0;
+}
+
+.quickedit input,
+.quickedit .input-text,
+.quickedit select {
+  padding: 2px 3px 2px 3px !important; }
+
+.quickedit [role=button],
+.quickedit button {
+  padding: 0 8px 3px 6px; }
+
+.input-icon {
+  position: relative;
+  width: 100%; }
+
+.input-icon .btn-input {
+  display: inline !important;
+  position: absolute !important;
+  top: .3rem !important;
+  right: 0 !important;
+}
+
+.input-icon .btn-input:hover,
+.input-icon .btn-input:focus {
+  -webkit-box-shadow: 0 !important;
+  box-shadow: 0 !important; }
 
 td img.avatar {
   max-width: 32px;
@@ -1247,7 +1312,7 @@ input[type=text] ~ .input-text {
 .starRating:not(old) {
   display: block;
   vertical-align: bottom;
-  width: 7.5em;
+  width: 12.5em;
   height: 2.5em;
   overflow: hidden; }
 
@@ -1257,40 +1322,51 @@ input[type=text] ~ .input-text {
 
 .starRating:not(old) > label {
   display: block;
+  margin: 0;
   position: relative;
-  float: right;
-  background: url(../images/star-off.svg);
-  background-size: contain; }
+  float: right; }
 
 .starRating:not(old) > label:before {
+  content: '\2605';
   display: block;
-  opacity: 0;
+  opacity: .25;
+  font-size: 2em;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: #888;
+  color: var(--starRating-color);
   transition: opacity .2s linear;
-  background: url(../images/star-on.svg);
-  background-size: contain;
-  width: 1.5em;
-  height: 1.5em;
-  content: ''; }
+  width: 1.25em;
+  height: 2.25em; }
 
 .starRating:not(old) > label:hover:before,
 .starRating:not(old) > label:hover ~ label:before,
 .starRating:not(:hover) > :checked ~ label:before {
   opacity: 1; }
 
-
-.rat {
+.rating {
   display: inline-block; }
 
-.rat span,
-.rat span.set {
+.rating span {
   display: inline-block;
-  background: url(../images/star-off.svg);
-  background-size: contain;
   width: 1em;
   height: 1em; }
 
-.rat span.set {
-  background: url(../images/star-on.svg); }
+.rating span:before{
+  content: '\2606';
+  display: block;
+  color: #888; }
+
+.rating span.set {
+  display: inline-block;
+  width: 1em;
+  height: 1em; }
+
+.rating span.set:before {
+  content: '\2605';
+  display: block;
+  color: var(--starRating-color);
+  -webkit-text-stroke-width: var(--starRating-outline-width);
+  -webkit-text-stroke-color: var(--starRating-outline-color); }
 
 .chat .chatList {
   border-right: 0;
@@ -1890,6 +1966,10 @@ button.toast-close-button {
   background-color: #fff;
   border-radius: 100%;
   animation: sk-chase-dot-before 2.0s infinite ease-in-out both; }
+
+.sk-chase.black .sk-chase-dot:before {
+  background-color: #000; }
+
 
 .sk-chase-dot:nth-child(1) { animation-delay: -1.1s; }
 .sk-chase-dot:nth-child(2) { animation-delay: -1.0s; }
