--- a/layout/default/css/stylesheet-vars.css
+++ b/layout/default/css/stylesheet-vars.css
@@ -46,13 +46,11 @@
   --menu-button-color-hover: #f5f5f5;
   --menu-button-background-color: #007bff;
   --menu-button-background-color-hover: #0069d9;
-  --menu-button-border-color: #007bff;
-  --menu-button-border-color-hover: #0069d9;
   --menu-button-border-width: 1px;
   --menu-button-border-width-hover: 1px;
   --menu-button-border-style: solid;
   --menu-button-border-color: #007bff;
-  --menu-button-border-color-hover: #007bff;
+  --menu-button-border-color-hover: #0069d9;
   --menu-button-border-radius: .25rem;
   --menu-color: #000;
   --menu-color-active: #000;
@@ -86,51 +84,87 @@
   --table-border-color: #e9e9e9;
   --table-zebra-background: #f4f4f4;
 
+  --alert-danger-background-color: #f8d7da;
+  --alert-danger-border-color: #f5c2c7;
+  --alert-danger-color: #842029;
+  --alert-danger-link: #6a1a21;
   --danger-background-color: #f8d7da;
-  --danger-border-color: #f5c6cb;
-  --danger-color: #721c24;
+  --danger-border-color: #f5c2c7;
+  --danger-color: #842029;
   --danger-color-contrast: #fff;
-  --danger-link: #491217;
-  --dark-background-color: #d6d8d9;
-  --dark-border-color: #c6c8ca;
-  --dark-color: #1b1e21;
+  --danger-link: #6a1a21;
+  --alert-dark-background-color: #d3d3d4;
+  --alert-dark-border-color: #bcbebf;
+  --alert-dark-color: #141619;
+  --alert-dark-link: #101214;
+  --dark-background-color: #d3d3d4;
+  --dark-border-color: #bcbebf;
+  --dark-color: #141619;
   --dark-color-contrast: #000;
-  --dark-link: #040505;
+  --dark-link: #101214;
+  --alert-default-background-color: #ddd;
+  --alert-default-border-color: #ced4da;
+  --alert-default-color: #000;
+  --alert-default-link: #000;
   --default-background-color: #ddd;
   --default-border-color: #ced4da;
   --default-color: #000;
   --default-color-contrast: #fff;
   --default-link: #000;
-  --info-background-color: #d1ecf1;
-  --info-border-color: #bee5eb;
-  --info-color: #0c5460;
+  --alert-info-background-color: #cff4fc;
+  --alert-info-border-color: #b6effb;
+  --alert-info-color: #055160;
+  --alert-info-link: #04414d;
+  --info-background-color: #cff4fc;
+  --info-border-color: #b6effb;
+  --info-color: #055160;
   --info-color-contrast: #fff;
-  --info-link: #062c33;
+  --info-link: #04414d;
+  --alert-light-background-color: #fefefe;
+  --alert-light-border-color: #fdfdfe;
+  --alert-light-color: #636464;
+  --alert-light-link: #4f5050;
   --light-background-color: #fefefe;
   --light-border-color: #fdfdfe;
-  --light-color: #818182;
+  --light-color: #636464;
   --light-color-contrast: #fff;
-  --light-link: #686868;
+  --light-link: #4f5050;
+  --alert-primary-background-color: #cfe2ff;
+  --alert-primary-border-color: #b6d4fe;
+  --alert-primary-color: #084298;
+  --alert-primary-link: #06357a;
   --primary-background-color: #cfe2ff;
-  --primary-border-color: #bbd6fe;
-  --primary-color: #073984;
+  --primary-border-color: #b6d4fe;
+  --primary-color: #084298;
   --primary-color-contrast: #fff;
-  --primary-link: #042454;
+  --primary-link: #06357a;
+  --alert-secondary-background-color: #e2e3e5;
+  --alert-secondary-border-color: #d3d6d8;
+  --alert-secondary-color: #41464b;
+  --alert-secondary-link: #34383c;
   --secondary-background-color: #e2e3e5;
-  --secondary-border-color: #d6d8db;
-  --secondary-color: #383d41;
+  --secondary-border-color: #d3d6d8;
+  --secondary-color: #41464b;
   --secondary-color-contrast: #fff;
-  --secondary-link: #202326;
-  --success-background-color: #d4edda;
-  --success-border-color: #c3e6cb;
-  --success-color: #15572f;
+  --secondary-link: #34383c;
+  --alert-success-background-color: #d1e7dd;
+  --alert-success-border-color: #badbcc;
+  --alert-success-color: #0f5132;
+  --alert-success-link: #0c4128;
+  --success-background-color: #d1e7dd;
+  --success-border-color: #badbcc;
+  --success-color: #0f5132;
   --success-color-contrast: #fff;
-  --success-link: #0b2e13;
+  --success-link: #0c4128;
+  --alert-warning-background-color: #fff3cd;
+  --alert-warning-border-color: #ffecb5;
+  --alert-warning-color: #664d03;
+  --alert-warning-link: #523e02;
   --warning-background-color: #fff3cd;
-  --warning-border-color: #ffeeba;
-  --warning-color: #856404;
+  --warning-border-color: #ffecb5;
+  --warning-color: #664d03;
   --warning-color-contrast: #fff;
-  --warning-link: #533f03;
+  --warning-link: #523e02;
 
   --justify-important: center;
   --justify-normal: left;
