--- a/layout/default/css/stylesheet-vars.css
+++ b/layout/default/css/stylesheet-vars.css
@@ -25,7 +25,7 @@
   --mark-background-color: #ff0;
   --figcaption-color: #888;
 
-  --header-background-color: #4650F8;
+  --header-background-color: #fff;
   --header-color: #fff;
 
   --address-background-color: #fff;
