--- a/layout/default/footer.html
+++ b/layout/default/footer.html
@@ -4,7 +4,6 @@
 	<aside class="col-12 col-sm-3 mt-1 mt-sm-2 pt-4 order-4 order-sm-1 text-center">
 		<img class="mx-auto" src="layout/default/images/logo.png" alt="<print config=business>"><br>
 		<small>&copy; <print year>. <print config="abn"></small><br>
-		<small>Website Design by <a href="<print theme=creator_url>"><print theme="creator"></a></small>
 	</aside>
 	<aside class="col-12 col-md-4 col-lg-3 order-1 order-sm-2">
 		<h3 class="m-0 mt-4">Extras</h3>
@@ -45,6 +44,9 @@
 		<print honey_pot_quick_link>
 	</aside>
 </footer>
+<div class="designby">
+	Website Design by <a href="<print theme=creator_url>"><print theme="creator"></a>
+</div>
 <chat>
 	<div class="chat card icon col-12 col-sm-6 col-md-4 mr-0 mr-sm-2">
 		<div class="row">
