--- a/layout/default/header.html
+++ b/layout/default/header.html
@@ -18,7 +18,7 @@
 	</nav>
 </accountmenu>
 <activation>
-<div class="sticky-logo glass d-block d-lg-none text-center">
+<div class="d-block d-lg-none text-center">
 	<a href="<print meta=url>"><img class="mx-auto my-2" src="layout/default/images/logo.png" alt="<print config=business>"></a>
 </div>
 <address class="row mx-0 px-2 pt-2 pt-sm-4 glass">
@@ -83,7 +83,7 @@
 		<a href="bookings" role="button">Make a Booking</a>
 	</aside>
 </address>
-<header class="row sticky-top glass border-bottom shadow-bottom py-3">
+<header class="row border-bottom shadow-bottom py-3">
 	<div class="col-12 col-md-3 my-0 d-none d-lg-block">
 		<a href="<print meta=url>"><img class="brand" src="layout/default/images/logo.png" alt="<print config=business>"></a>
 	</div>
