--- a/layout/default/index.html
+++ b/layout/default/index.html
@@ -5,7 +5,7 @@
 	<cover>
 		<figure class="jumbotron"><print page="coverItem"></figure>
 	</cover>
-	<section class="row mt-5">
+	<section id="next-content-1" class="row mt-5">
 		<article class="col-12 col-md">
 			<print page="notes">
 		</article>
@@ -29,13 +29,13 @@
 		</aside>
 	</section>
 	<section class="jumbotron mt-5">
-		<img class="filter" src="media/307093.jpg" alt="test">
+		<img class="filter" src="layout/default/images/index-jumbotron.jpg" alt="Index Jumbotron">
   	<header class="mt-5">
 			<h2 class="text-white">Fluid jumbotron</h2>
 		</header>
   	<p class="mt-5 text-white">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
 	</section>
-	<settings items="all" contenttype="all">
+	<settings items="4" contenttype="all">
 	<section class="mt-5">
 		<header>
 			<h2>Latest Content Additions</h2>
