--- a/core/css/stylesheet-helpers.css
+++ b/core/css/stylesheet-helpers.css
@@ -561,6 +561,9 @@
 .border-0 {
   border: 0 !important; }
 
+.border-radius-0 {
+  border-radius: 0 !important; }
+
 .border-top-0 {
   border-top: 0 !important; }
 
