--- a/layout/default/content.html
+++ b/layout/default/content.html
@@ -62,6 +62,7 @@
 								<inventory>
 									<choices>
 									<addtocart>
+										<points><small class="points d-block mb-3 text-center">Earn <print content="points"> points when purchasing this item.</small></points>
 										<button class="addCart btn-block" data-cartid="<print content=id>" data-cartchoice="0">Buy Now</button>
 									</addtocart>
 									<condition>
@@ -183,33 +184,31 @@
 					</div>
 				</pagination>
 				<items>
-					<div class="col-12 col-sm-5">
-						<article class="card">
-							<div class="card-image">
-								<a href="<print content=linktitle>">
-									<img <print content=srcset>src="<print content=thumb>" loading="lazy" alt="<print content=imageALT>">
-								</a>
-								<quickview>
-									<div class="quickview" aria-hidden="true">
-										<a class="btn" data-fancybox data-type="ajax" data-src="core/quickview.php?id=<print content=id>" href="javascript:;">Quick View</a>
-									</div>
-								</quickview>
-							</div>
-							<div class="card-header">
-								<div class="title"><h2 class="h4 line-clamp"><a href="<print content=linktitle>" title="<print content=title>"><print content="title"></a></h2></div>
-								<print content="category" class="card-subtitle" container="div" leadingtext="Category: ">
-							</div>
-							<div class="card-body">
-								<print content="notes">
-							</div>
-							<div class="corner-ribbon big top-right text-uppercase font-weight-bold shadow-sm"><print content="quantity"></div>
-							<div class="corner-ribbon small top-right success text-uppercase font-weight-bold shadow-sm"><print content="cost"></div>
-							<div class="corner-ribbon big top-left <print content=cssrank> text-uppercase font-weight-bold shadow-sm"><print content="rank"></div>
-							<div class="card-footer">
-									<a class="btn" href="<print content=linktitle>" role="button">View</a>
-							</div>
-						</article>
-					</div>
+					<article class="card">
+						<div class="card-image">
+							<a href="<print content=linktitle>">
+								<img <print content=srcset>src="<print content=thumb>" loading="lazy" alt="<print content=imageALT>">
+							</a>
+							<quickview>
+								<div class="quickview" aria-hidden="true">
+									<a class="btn" data-fancybox data-type="ajax" data-src="core/quickview.php?id=<print content=id>" href="javascript:;">Quick View</a>
+								</div>
+							</quickview>
+						</div>
+						<div class="card-header">
+							<div class="title"><h2 class="h4 line-clamp"><a href="<print content=linktitle>" title="<print content=title>"><print content="title"></a></h2></div>
+							<print content="category" class="card-subtitle" container="div" leadingtext="Category: ">
+						</div>
+						<div class="card-body">
+							<print content="notes">
+						</div>
+						<div class="corner-ribbon big top-right text-uppercase font-weight-bold shadow-sm"><print content="quantity"></div>
+						<div class="corner-ribbon small top-right success text-uppercase font-weight-bold shadow-sm"><print content="cost"></div>
+						<div class="corner-ribbon big top-left <print content=cssrank> text-uppercase font-weight-bold shadow-sm"><print content="rank"></div>
+						<div class="card-footer">
+								<a class="btn" href="<print content=linktitle>" role="button">View</a>
+						</div>
+					</article>
 				</items>
 				<pagination>
 					<div class="row">
