--- a/layout/default/css/style.css
+++ b/layout/default/css/style.css
@@ -16,32 +16,11 @@
    and most likely include overrides to produce a particular effect. */
 
 .brand {
-  position: absolute;
-  top:10px;
-  right:auto;
-  bottom:auto;
-  left:60px;
   max-width: 200px !important;
   max-height: 50px !important;
   display: block;
-  margin: 0 !important;
+  margin: 0 0 0 60px !important;
   padding: 0 !important; }
-
-.glass {
-  background-color: rgba(255, 255, 255, .7);
-  -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px); }
-
-.sticky-logo {
-  z-index: 1020;
-  position: sticky;
-  top: 0; }
-
-.sticky-logo ~ .sticky-top {
-  top: 75px; }
-
-nav {
-  background-color: transparent !important; }
 
 nav ul li {
   display: inline-block !important;
@@ -88,22 +67,3 @@ address [role="button"] {
 
 .leaflet-default-icon-path {
   background-image: url(../images/marker-icon.png) !important; }
-
-@media (min-width: 360px) { // xs}
-
-@media (min-width: 576px) { // sm}
-
-@media (min-width: 768px) { // md}
-
-@media (min-width: 992px) { // lg
-  .sticky-logo {
-    display: none;
-    z-index: 1020;
-    position: sticky;
-    top: 0; }
-
-  .sticky-logo ~ .sticky-top {
-    top: 0; }
-}
-
-@media (min-width: 1200px) { // xl }
