Road to v0.1.5 release
- Remove .valid() jQuery check that wasn't working correctly.
- Fix typo in installer, stopping stepping through install.
- Fix index page not showing correct number of items set in settings attribute.
- Add is_numeric check in postage unit calculator, and cart calculation.
- Fix Cover Image removal removing input element, and changing to wrong noimage file.
- Add Points Earning system and template parsing, where points are added to users account depending on the value an inventory item is set to.
- Add information to Orders in Administration, showing Rank, Purchase Limit, Spent, Points, and last purchase.
- Fix hidden spam field position when logged in when viewing the cart, was throwing an error when submitting cart.
- Remove SQL and Parsing of adding category's to menu dropdowns.
- Add "Share this to Social Media" widget to the sidebar menu, along with an edit in administration button when logged in as Administrator.
- Remove reference to "bootstrap.min.css" from service worker as Bootstrap is now deprecated.
- Fix loading of Summernote plugin CSS in Find N Replace plugin, we now load CSS in the Head rather than script.
- Add Points Earned with the Account Name and Rank display.
- Fix Logged in and Not Logged in Purchasing.
- Fix Category Navigation not showing correct selected Category after selection.

--- a/core/css/stylesheet-aurora.css
+++ b/core/css/stylesheet-aurora.css
@@ -44,30 +44,39 @@
   background-color: #fff !important;
   color: #000 !important;
   font-family: Arial !important;
-  font-size: 1em !important; }
+  font-size: 1em !important;
+  font-weight: 400 !important; }
 
 .order-list {
-  border: 0 !important;
   border-radius: 0 !important; }
+
+.order-list thead {
+  background-color: #000 !important; }
 
 .order-list thead tr th {
   background-color: #000 !important;
   font-family: Arial !important;
   font-size: 1em !important;
+  font-weight: 700 !important;
   color: #fff !important; }
 
 .order-list tbody tr td {
   background-color: #fff !important;
   font-family: Arial !important;
   font-size: 1em !important;
-  color: #000 !important; }
+  font-weight: 400 !important;
+  color: #000 !important;
+  text-shadow: none !important; }
 
 .order-list tbody tr td a {
   font-family: Arial !important;
   font-size: 1em !important;
-  color: #000 !important; }
+  font-weight: 400 !important;
+  color: #000 !important;
+  text-shadow: none !important; }
 
 .order-list tbody tr td a:hover {
+  color: #000 !important;
   text-decoration: underline !important; }
 
 .order-list tbody tr td a.btn {
@@ -76,7 +85,6 @@
 .order-list tbody tr td a.btn:hover {
   color: var(--button-color-hover) !important;
   text-decoration: none !important; }
-
 
 #cart * {
   background: #fff !important;
