--- a/layout/default/header.html
+++ b/layout/default/header.html
@@ -14,7 +14,7 @@
 				<img class="img-avatar avatar" src="<print user=avatar>" alt="<print user=name>">
 			</li>
 		</ul>
-		<div class="account-rank badger badge-<print user=cssrank>"><print user="rank"></div>
+		<div class="account-rank badger badge-<print user=cssrank>"><print user="points"> <print user="rank"></div>
 	</nav>
 </accountmenu>
 <activation>
