--- a/layout/default/side_menu.html
+++ b/layout/default/side_menu.html
@@ -1,7 +1,7 @@
 	<aside class="col-12 col-sm-3 order-1 order-sm-2 mb-5 mb-sm-5 px-3">
 		<div class="card mb-3">
-			<div class="card-body mt-4 mb-3">
-				<legend>Share this to Social Media</legend>
+			<div class="card-body mt-4 mb-3 no-clamp">
+				<legend class="h5">Share this to Social Media</legend>
 				<div class="text-center"><share></div>
 				<admin>
 					<div class="text-right">
