--- a/core/css/stylesheet-helpers.css
+++ b/core/css/stylesheet-helpers.css
@@ -636,6 +636,10 @@
 .shadow-none {
   box-shadow: none !important; }
 
+.text-shadow-0,
+.text-shadow-none {
+  text-shadow: none !important; }
+
 .shadow {
   box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .15) !important; }
 
