--- a/layout/default/orders.html
+++ b/layout/default/orders.html
@@ -11,7 +11,7 @@
 	<orderlist>
 		<section class="row mt-5">
 			<article class="card col-12 col-sm-7 mt-5 border-0">
-				<table class="border mb-0">
+				<table class="border mb-0 orders-list">
 					<thead class="d-none d-sm-table-header-group">
 						<tr>
 							<th class="text-center"><span class="d-none d-sm-block">Order #</span></th>
@@ -42,7 +42,7 @@
 	<order>
 		<div class="row mt-5">
 			<div class="col-12 col-sm-7 mx-auto">
-				<div class="alert alert-info">
+				<div class="alert alert-info text-shadow-0">
 					Please do not hesitate to contact us if the information on the order is incorrect, you need to change the delivery or payment options, or if you simply require assistance. Please include the Order Number <strong><print order="ordernumber"></strong> to make it easier to provide assistance.
 				</div>
 			</div>
