--- a/layout/default/content.html
+++ b/layout/default/content.html
@@ -223,5 +223,6 @@
 		</contentitems>
 </block>
 <block include="side_menu.html">
+</section>
 <block include="footer.html">
 <block include="meta_footer.html">
