--- a/layout/default/orders.html
+++ b/layout/default/orders.html
@@ -11,7 +11,7 @@
 	<orderlist>
 		<section class="row mt-5">
 			<article class="card col-12 col-sm-7 mt-5 border-0">
-				<table class="border mb-0 orders-list">
+				<table class="border mb-0 order-list">
 					<thead class="d-none d-sm-table-header-group">
 						<tr>
 							<th class="text-center"><span class="d-none d-sm-block">Order #</span></th>
