--- a/layout/default/meta_footer.html
+++ b/layout/default/meta_footer.html
@@ -1,12 +1,13 @@
-</main>
-<script src="core/js/jquery/jquery.min.js"></script>
-<script src="core/js/fancybox/fancybox.umd.js"></script>
-<script src="core/js/js.js"></script>
-<carousel>
-<chatscript>
-<gdpr>
-<map>
-<g-recaptchascript>
-<serviceworker>
-</body>
+    </main>
+    <script src="core/js/jquery/jquery.min.js"></script>
+    <script src="core/js/fancybox/fancybox.umd.js"></script>
+    <script src="core/js/js.js"></script>
+    <carousel>
+    <chatscript>
+    <gdpr>
+    <map>
+    <g-recaptchascript>
+    <serviceworker>
+    <countdownscript>
+  </body>
 </html>
